--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,16 @@ header {
 .welcome-text a {
   margin: 20px 0;
 }
+#about h3 {
+  text-align: center;
+  color: rgb(107, 107, 107);
+  padding: 6px 12px;
+}
+#about p {
+  text-align: center;
+  padding: 6px 20px;
+}
+
 #portfolio {
   background: #b0b2ac url(images/square_bg.png);
   background-size: cover;
