--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ h4 {
 #contact form {
   width: 80%;
   max-width: 400px;
-  margin: 20px auto;
+  margin: 0px 20px 0px 20px;
   text-align: center;
 }
 #contact input,
