--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ h4 {
   font-weight: normal;
 }
 .leading {
-  font-size: 0.9em;
+  font-size: 0.85em;
 }
 
 /* mobile styles*/
@@ -135,6 +135,9 @@ h4 {
   padding: 10px 10px 10px 10px;
   grid-column: 1/9;
   box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
+}
+#skills .leading {
+  padding-bottom: 10px;
 }
 
 #skills h3 {
@@ -191,6 +194,9 @@ h4 {
   text-align: center;
   margin-bottom: 0;
   color: #fff !important;
+}
+#contact h3 {
+  padding-bottom: 20px;
 }
 #contact form {
   width: 80%;
