--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ h4 {
 }
 #skills li {
   padding: 10px;
-  background: rgba(114, 82, 82, 0.2);
+  background: rgba(71, 65, 65, 0.2);
   grid-column: span 4;
   text-align: center;
   box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
@@ -190,6 +190,19 @@ h4 {
   text-align: center;
   margin-bottom: 0;
   color: #fff !important;
+}
+#contact h4 {
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+}
+#contact .contact-info {
+  text-align: center;
+}
+#contact ul li {
+  padding: 5px;
+  list-style: none;
+  color: #fff;
 }
 #contact h3 {
   padding-bottom: 20px;
