--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ h4 {
   justify-self: start;
 }
 #about {
-  box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.05);
 }
 
 #about h3 {
