--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body {
   background: var(--primary);
   color: rgb(24, 21, 21);
   padding: 6px 12px;
-  border-radius: 20px;
+  border-radius: 10px;
   text-transform: uppercase;
   box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
   display: inline-block;
@@ -145,10 +145,13 @@ h4 {
   box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
 }
 .welcome-text {
-  grid-column: 1/6;
-  align-self: center;
-  justify-self: start;
-  padding-top: 150px;
+  grid-column: 1/7;
+  padding-top: 250px;
+  left: 20px;
+}
+
+.welcome-text h2{
+  padding-bottom: 10px;
 }
 
 #about {
@@ -244,11 +247,10 @@ h4 {
   padding-bottom: 15px;
 }
 #contact form {
-  width: 92%;
-  max-width: 400px;
+  width: 90%;
   margin: 0px 20px 0px 20px;
   text-align: center;
-    bottom: 10px;
+  bottom: 10px;
 }
 #contact input,
 #contact textarea {
