--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body{
   top: 0;
   overflow: hidden;
   position: fixed;
+  box-shadow: 0px 0px 2px 0px rgb(66, 66, 66);
 }
 
 .main{
@@ -337,5 +338,13 @@ footer img {
   }
   #check:checked ~ ul{
     left: 0;
+  }
+  label.logo{
+    font-size: 30px;
+    position: relative;
+    right: 70px;
+    border-radius: 0px 0px 10px 0px #876;
+
+    
   }
 }
