--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ h4 {
 #portfolio h3 {
   margin-bottom: 0;
   text-align: center;
+  padding-bottom: 15px;
 }
 .projects a {
   grid-column: 1/9;
@@ -343,8 +344,5 @@ footer img {
     font-size: 30px;
     position: relative;
     right: 70px;
-    border-radius: 0px 0px 10px 0px #876;
-
-    
   }
 }
