--- a/css/styles.css
+++ b/css/styles.css
@@ -143,11 +143,12 @@ h4 {
   height: 450px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
 }
 .welcome-text {
   grid-column: 1/7;
-  padding-top: 250px;
+  padding-top: 220px;
   left: 20px;
 }
 
