added text-decoration on logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ label.logo{
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
+  text-decoration: underline;
+  text-decoration-color: var(--primary);
 }
 .nav-bar ul{
   float: right;
