--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ h4 {
 
 #skills h3 {
   text-align: center;
+  padding-top: 15px;
 }
 #skills ul {
   margin: 40px 0;
@@ -288,7 +289,7 @@ footer li {
 footer img {
   width: 20px;
 }
-
+/* desktop */
 @media only screen and (min-width: 952px) {
   label.logo{
     font-size: 30px;
@@ -298,12 +299,7 @@ footer img {
     font-size: 16px;
   }
   #skills li {
-    padding: 10px;
-    background: rgba(71, 65, 65, 0.15);
-    grid-column: span 2;
-    text-align: center;
-    box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
-    margin: 0;
+    grid-column: span 2; 
   }
   #contact form {
     width: 90%;
@@ -316,6 +312,22 @@ footer img {
   }
   #contact h3{
     padding-top: 15px;
+  }
+  .welcome-text {
+    grid-column: 3/8;
+    grid-row: 4;
+    text-align: center;
+    padding-right: 100px;
+  }
+  .welcome-text h2{
+    font-size: 30px;
+  }
+  .welcome-text p{
+    font-size: 80px;
+  }
+  #welcome {
+    background-size:cover;
+    background-position:top;
   }
 }
 
