--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,11 @@ footer img {
     font-size: 16px;
   }
   #skills li {
-    grid-column: span 2; 
+    padding: 10px;
+    background: rgba(71, 65, 65, 0.15);
+    grid-column: span 2;
+    text-align: center;
+    box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
   }
   #contact form {
     width: 90%;
