--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,8 @@ body {
 }
 .button:hover {
   color: #333;
-  background: var(--secondary);
-  border: 2px solid var(--primary);
+  background: #e9c46a;
+  border: 2px solid #e9c46a;
 }
 input,
 textarea {
@@ -157,6 +157,12 @@ h4 {
 
 .welcome-text h2{
   padding-bottom: 10px;
+}
+.welcome-text p{
+  font-size: 22px; 
+  color: #ffffff ; 
+  font-weight: 500; 
+  padding-bottom: 15px;
 }
 
 #about {
@@ -319,19 +325,25 @@ footer img {
   }
   .welcome-text {
     grid-column: 3/8;
-    grid-row: 4;
+    grid-row: 3;
     text-align: center;
     padding-right: 100px;
   }
   .welcome-text h2{
-    font-size: 30px;
+    font-size: 37px;
   }
   .welcome-text p{
-    font-size: 80px;
+    font-size: 30px;
+  }
+  .welcome-text a{
+    font-size: 19px;
   }
   #welcome {
     background-size:cover;
     background-position:top;
+  }
+  .button {
+    padding: 12px 22px;
   }
 }
 
