--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,8 @@ footer img {
   width: 30px;
 }
 /* desktop */
+
+
 @media only screen and (min-width: 952px) {
   label.logo{
     font-size: 30px;
@@ -310,17 +312,17 @@ footer img {
   #skills li {
     padding: 10px;
     background: rgba(71, 65, 65, 0.15);
-    grid-column: span 4;
+    grid-column: span 2;
     text-align: center;
     box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
   }
   #contact form {
-    width: 90%;
+    width: 100%;
     max-width: 600px;
     margin: 0px 20px 0px 20px;
     text-align: center;
     position: relative;
-    left: 17%;
+    left: 35%;
     bottom: 10px;
   }
   #contact h3{
@@ -330,13 +332,13 @@ footer img {
     grid-column: 3/8;
     grid-row: 3;
     text-align: center;
-    padding-right: 100px;
+    padding-right: 220px;
   }
   .welcome-text h2{
-    font-size: 37px;
+    font-size: 40px;
   }
   .welcome-text p{
-    font-size: 30px;
+    font-size: 35px;
   }
   .welcome-text a{
     font-size: 19px;
@@ -344,9 +346,10 @@ footer img {
   #welcome {
     background-size:cover;
     background-position:top;
+    min-height: 100vh;
   }
   .button {
-    padding: 12px 22px;
+    padding: 16px 32px;
   }
   .projects a h4{
     font-size: 20px;
@@ -354,6 +357,13 @@ footer img {
   }
   footer img {
     width: 40px;
+  }
+  h3 {
+    font-size: 1.9em;
+  }
+  .about-text p{
+    font-size: 20px;
+    text-align: center;
   }
 }
 
