--- a/css/styles.css
+++ b/css/styles.css
@@ -310,11 +310,12 @@ footer img {
     font-size: 16px;
   }
   #skills li {
-    padding: 10px;
+    padding: 30px;
     background: rgba(71, 65, 65, 0.15);
     grid-column: span 4;
     text-align: center;
     box-shadow: 1px 2px 3px 4px rgba(0, 0, 0, 0.05);
+    margin: 10px 20px 10px 20px;
   }
   #contact form {
     width: 100%;
@@ -364,6 +365,8 @@ footer img {
   .about-text p{
     font-size: 20px;
     text-align: center;
+    margin-left: 200px;
+    margin-right: 200px;
   }
 }
 
