--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,7 @@ footer img {
   }
   #contact .contact-info{
     padding-right: 80px;
+    font-size: 22px;
   }
   .welcome-text {
     grid-column: 3/8;
