--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ footer .copyright {
   font-size: 0.85em;
 }
 footer .social {
-  grid-column: 7/9;
+  grid-column: 7/8;
   display: flex;
   justify-content: flex-end;
 }
@@ -385,13 +385,14 @@ footer img {
   footer .copyright {
     color: #fff;
     font-size: 1.5em;
-    padding-left: 20px;
+    padding-left: 450px;
     padding-top: 20px;
   }
   footer .social {
     display: flex;
     justify-content: flex-end;
     padding-bottom: 10px;
+    padding-right: 500px;
   }
   #contact .message-me {
     font-size: 40px;
