--- a/css/styles.css
+++ b/css/styles.css
@@ -362,8 +362,9 @@ footer img {
     text-decoration: underline;
   }
   footer img {
-    width: 45px;
+    width: 55px;
     padding-top: 5px;
+    padding: 5px;
   }
   h3 {
     font-size: 2.4em;
@@ -392,7 +393,7 @@ footer img {
     display: flex;
     justify-content: flex-end;
     padding-bottom: 10px;
-    padding-right: 200px;
+    padding-right: 180px;
   }
   #contact .message-me {
     font-size: 40px;
